--- a/ModelCodeBarre/ApiLib/ApiLib.csproj
+++ b/ModelCodeBarre/ApiLib/ApiLib.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ApiLib\ApiLib.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ModelCodeBarre\ModelCodeBarre.csproj" />
-    <ProjectReference Include="..\StubLib\StubLib.csproj" />
   </ItemGroup>
 
 </Project>
